<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.lsa.lol.summonerapp.Main2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/topChunk"
        android:background="#6697cc">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FrameLayout">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/profile_icon"
                android:id="@+id/profileImage"/>


            <TextView
                android:id="@+id/summonerLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:padding="5dp"
                android:text="@string/level_placeholder"
                android:textSize="12sp"
                android:background="#000000"
                android:textColor="#FFFFFF"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="#1a1a1a"
                android:text="@string/loading"
                android:id="@+id/summonerName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/summonerLevelSubtext"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/summonerRankSubtext"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#8cb1d9">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_game_btn"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/currentMatchButton"
            app:backgroundTint="#e6f0ff"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center"
            android:background="#b1cae7">

            <ImageView
                android:layout_width="100dp"
                android:contentDescription="@string/tier_desc"
                android:layout_height="100dp"
                android:id="@+id/tierImage" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/division_dier"
                    android:id="@+id/divisionAndTier"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lp_wins_loses"
                    android:id="@+id/stats"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/league_name"
                    android:id="@+id/leagueName"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noMatchHistoryFound"
                    android:textColor="#000000"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#c4d8ed">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

                <TextView
                    android:id="@+id/responseView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
